fix map index spacing

--- a/app/assets/stylesheets/components/index.scss
+++ b/app/assets/stylesheets/components/index.scss
@@ -3,9 +3,7 @@
     background-color: white;
     width: 100%;
     display: flex;
-    flex-direction: column;
     position: absolute;
-    justify-content: space-between;
     font-family: 'Montserrat', sans-serif; 
 }
 
@@ -27,7 +25,7 @@
 }
 
 .route-index-item {
-    padding: 10px;
+    margin: 10px;
 }
 
 #map-container {
